# boomerang

./: .gitignore  Cargo.toml  FourierCombinedFit.py  Fourier_LiquidFit.py  HarmonicFit.py  LICENSE  LiquidFit.py  PsyFit.py  README.md  arg.csv  betterps.csv  betterps1.csv  calculator.py  curve.plt  curve_fit_utils.py  curvebetter.plt  data_utils.py  differential_solver.py  fit.py  fit_physics.py  go.mod  gradiantCal.py  kalman.go  main.ipynb  mathematicalMethod.py  nihe.wxmx  plot_utils.py  ps.csv  ps1.csv  ps2.csv  pyproject.toml  stimulator.py  test.py  trackCheck.py  validate_physics.py  实验数据
.github/: copilot-instructions.md
backup/: derivatives.py  fitBAP.py  fitSPE.py  gradiantCal.py  physicsCal.py  rawProcess.py  smoother.py  trackCheck.py
config/: plots_config.yaml
data/: readme.md  track1.csv  track1opt.csv  track2opt.csv  track3opt.csv  track5.csv  track5opt.csv  track6.csv  track6opt.csv  track7.csv  track7opt.csv  track8.csv  track8opt.csv  track9opt.csv
data/final/: track1opt.csv  track2opt.csv  track3opt.csv  track5opt.csv  track6opt.csv  track7opt.csv  track8opt.csv  track9opt.csv
data/interm/: track1SMR.csv  track1opt_coeffs.csv  track2SMR.csv  track2opt_coeffs.csv  track3SMR.csv  track3opt_coeffs.csv  track5SMR.csv  track5opt_coeffs.csv  track6SMR.csv  track6opt_coeffs.csv  track7SMR.csv  track7opt_coeffs.csv  track8SMR.csv  track9SMR.csv  (+4 more)
docs/: visualization_refactor.md  研究笔记.md
examples/: demo_visualization_refactor.py
src/: main.rs
src/calculation/: BUILD.md  Cargo.toml  README.md
src/calculation/benches/: integration_bench.rs
src/calculation/src/: aerodynamics.rs  constants.rs  lib.rs  loss.rs  main.rs  metrics.rs  ode.rs  python.rs  vector.rs
(+43 files in other folders)
