
[package]
name = "boomerang_calc"
version = "0.1.0"
edition = "2021"

[lib]
name = "boomerang_calc"
crate-type = ["lib", "cdylib"]

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
thiserror = "1.0"
itertools = "0.12"

# For Python bindings (optional)
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# Performance optimizations
sanitize = "0.1"  # For debug builds
# Fast math operations
# Note: stdsimd is unstable, so we rely on compiler optimizations

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
rusqlite = { version = "0.30", features = ["bundled"] }

[features]
default = ["python-bindings"]
python-bindings = ["pyo3"]
no-python = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true

[[bench]]
name = "integration_bench"
harness = false
